--- a/ReactNativeWorkshopApp/package.json
+++ b/ReactNativeWorkshopApp/package.json
@@ -6,6 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "baobab": "^2.3.2",
+    "baobab-react": "^1.0.1",
     "react-native": "^0.18.0"
   }
 }
