--- a/ReactNativeWorkshopApp/package.json
+++ b/ReactNativeWorkshopApp/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "baobab": "^2.3.2",
     "baobab-react": "^1.0.1",
+    "lodash": "^4.0.0",
+    "moment": "^2.11.1",
+    "node-polyglot": "^1.0.0",
     "react-native": "^0.18.0"
   }
 }
