--- a/ReactNativeWorkshopApp/package.json
+++ b/ReactNativeWorkshopApp/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.0.0",
     "moment": "^2.11.1",
     "node-polyglot": "^1.0.0",
+    "react": "^0.14.6",
     "react-native": "^0.18.0"
   }
 }
