Change project to client needs about ES6 and Flux

--- a/ReactNativeWorkshopApp/package.json
+++ b/ReactNativeWorkshopApp/package.json
@@ -6,12 +6,14 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "alt": "^0.17.9",
     "baobab": "^2.3.2",
     "baobab-react": "^1.0.1",
     "lodash": "^4.0.0",
     "moment": "^2.11.1",
     "node-polyglot": "^1.0.0",
     "react": "^0.14.6",
-    "react-native": "^0.18.0"
+    "react-native": "^0.18.0",
+    "react-native-navbar": "^1.1.7"
   }
 }
