Fixed tests Signed-off-by: Renan Valentin <renan.lifestyle@hotmail.com> Signed-off-by: Sergio Oliveira <seocam@seocam.com>

--- a/ReactNativeWorkshopApp/package.json
+++ b/ReactNativeWorkshopApp/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
   },
   "dependencies": {
     "alt": "^0.17.9",
@@ -15,5 +16,20 @@
     "react": "^0.14.6",
     "react-native": "^0.18.0",
     "react-native-navbar": "^1.1.7"
+  },
+  "devDependencies": {
+    "babel-jest": "^6.0.1",
+    "jest-cli": "*"
+  },
+  "jest": {
+    "scriptPreprocessor": "node_modules/react-native/jestSupport/preprocessor.js",
+    "setupEnvScriptFile": "node_modules/react-native/jestSupport/env.js",
+    "testFileExtensions": [
+      "js"
+    ],
+    "unmockedModulePathPatterns": [
+      "promise",
+      "source-map"
+    ]
   }
 }
